# axum-crud-api

./: Cargo.toml  README.md
src/: handler.rs  main.rs  models.rs  response.rs  route.rs
